RESOLVED FIXED19966
CSS variables crash when using hex notation for colors
https://bugs.webkit.org/show_bug.cgi?id=19966
Summary CSS variables crash when using hex notation for colors
boucher
Reported 2008-07-09 14:13:29 PDT
The new CSS variable mechanism will crash if you specify a color variable using hex (#) notation. The URL attached has a simple test case. The offending line: @-webkit-variables { defaultTextColor: #333; }
Attachments
First attempt (17.09 KB, patch)
2008-07-12 06:44 PDT, Rob Buis
mitz: review+
Rob Buis
Comment 1 2008-07-12 06:44:44 PDT
Created attachment 22255 [details] First attempt From the testcase and spec example I guess hex colors should be supported, this fixes that. I wonder whether there are more CSSPrimitiveValues that are not supported for the css variables... Cheers, Rob.
mitz
Comment 2 2008-07-20 14:32:42 PDT
Comment on attachment 22255 [details] First attempt The code changes look good, but please consider changing the test to dump as text, using getComputedStyle. Thanks!
Rob Buis
Comment 3 2008-07-22 01:28:57 PDT
Landed in r35272.
Note You need to log in before you can comment on or make changes to this bug.