        Reviewed by Mitz.

https://bugs.webkit.org/show_bug.cgi?id=19966
        CSS variables crash when using hex notation for colors

        Support hex colors as values for the css variables.

        Test: fast/css/variables/color-hex-test.html



Canonical link: https://commits.webkit.org/27703@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35272 268f45cc-cd09-0410-ab3c-d52691b4dbfc